--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -9,7 +9,8 @@
 
 	img {
 		width: calc(30% - 20px);
-		max-height: 100%;
+		max-height: 100vh;
+		max-width: 100vh;
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 	}
