--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -10,7 +10,7 @@
 	img {
 		width: calc(30% - 20px);
 		max-height: 100vh;
-		max-width: 100vh;
+		max-width: 100vw;
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 	}
