--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -8,9 +8,9 @@
 	-webkit-backdrop-filter: blur(100px) grayscale(20%);
 
 	img {
-		width: calc(30% - 20px);
+		width: calc(40vh - 20px);
 		max-height: 100vh;
-		max-width: 100vw;
+		max-width: 50%;
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 	}
