--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -1,6 +1,6 @@
 .song-container {
-	width: 100vw;
-	height: 100vh;
+	max-width: 100vw;
+	max-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -10,7 +10,7 @@
 
 	img {
 		width: calc(40vh - 20px);
-		max-height: 100vh;
+		max-height: 100%;
 		max-width: 50%;
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
