--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -2,6 +2,7 @@
 	height: 100%;
 	width: 100%;
 	display: flex;
+	position: absolute;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
