--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -1,11 +1,12 @@
 .song-container {
-	height: 100%;
+	height: 100vh;
 	width: 100%;
+	padding: 20vh 0 20vh 0;
 	display: flex;
 	position: absolute;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	// justify-content: center;
 	backdrop-filter: blur(100px) grayscale(20%);
 	-webkit-backdrop-filter: blur(100px) grayscale(20%);
 
@@ -22,5 +23,15 @@
 
 	h3 {
 		font-size: 1rem;
+	}
+}
+
+@media screen and (orientation: landscape) {
+	._song-container {
+		display: flex;
+		flex-direction: row;
+		padding: 0 20vw;
+		align-items: center;
+		// justify-content: center;
 	}
 }
