--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -1,9 +1,9 @@
 .song-container {
 	height: 100vh;
 	width: 100%;
-	padding: 20vh 0 20vh 0;
+	// padding: 20vh 0 20vh 0;
 	display: flex;
-	position: absolute;
+	position: relative;
 	flex-direction: column;
 	align-items: center;
 	// justify-content: center;
