--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -6,11 +6,11 @@
 	position: relative;
 	flex-direction: column;
 	align-items: center;
-	// justify-content: center;
+	justify-content: space-evenly;
 	backdrop-filter: blur(100px) grayscale(20%);
 	-webkit-backdrop-filter: blur(100px) grayscale(20%);
 
-	img {
+	.img-inside {
 		width: calc(40vh - 20px);
 		max-height: 100%;
 		max-width: 50%;
