--- a/src/components/player/css/Player.module.scss
+++ b/src/components/player/css/Player.module.scss
@@ -56,8 +56,8 @@ input {
 		user-select: none;
 	}
 
-	.play,
-	.pause,
+	.toggle-play,
+	.toggle-pause,
 	.skip-back,
 	.skip-forward {
 		&:hover {
