--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -1,14 +1,24 @@
+.backdrop-container {
+	height: 120%;
+	width: 120%;
+	position: absolute;
+	top: -10%;
+	left: -10%;
+	backdrop-filter: blur(100px) grayscale(20%);
+	-webkit-backdrop-filter: blur(100px) grayscale(20%);
+}
+
 .song-container {
-	height: 100%;
+	height: 120vh;
 	width: 100%;
-	// padding-bottom: 200px;
 	display: flex;
 	position: relative;
 	flex-direction: column;
 	align-items: center;
+}
+
+.song-container {
 	justify-content: center;
-	backdrop-filter: blur(100px) grayscale(20%);
-	-webkit-backdrop-filter: blur(100px) grayscale(20%);
 
 	.img-inside {
 		width: calc(40vh - 20px);
