--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -1,20 +1,20 @@
 .backdrop-container {
-	height: 120%;
-	width: 120%;
-	position: absolute;
-	top: -10%;
-	left: -10%;
+	height: 100%;
+	width: 100%;
+
 	backdrop-filter: blur(100px) grayscale(20%);
 	-webkit-backdrop-filter: blur(100px) grayscale(20%);
 }
 
 .song-container {
-	height: 120vh;
+	min-height: 370px;
+	height: 100vh;
 	width: 100%;
 	display: flex;
-	position: relative;
+	// position: relative;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 }
 
 .song-container {
