--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -6,6 +6,7 @@
 	justify-content: center;
 	backdrop-filter: blur(100px) grayscale(20%);
 	-webkit-backdrop-filter: blur(100px) grayscale(20%);
+	margin: -10px;
 }
 
 .song-container {
