--- a/src/components/player/css/Player.module.scss
+++ b/src/components/player/css/Player.module.scss
@@ -2,6 +2,8 @@
 	display: block;
 	justify-content: space-between;
 	align-items: center;
+	font-size: large;
+	font-kerning: none;
 	.left {
 		padding-right: 20px;
 	}
