--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -15,9 +15,9 @@
 	justify-content: center;
 
 	.img-inside {
-		width: calc(40vh - 20px);
+		width: 90%;
 		max-height: 100%;
-		max-width: 50%;
+
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 	}
