--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -15,11 +15,18 @@
 	justify-content: center;
 
 	.img-inside {
-		width: 90%;
+		width: calc(40vh - 20px);
 		max-height: 100%;
-
+		max-width: 50%;
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
+
+		@media (max-width: 768px) {
+			width: 90%;
+			max-height: 100%;
+			border-radius: 5% 5% / 5% 5%;
+			box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
+		}
 	}
 	h2 {
 		// padding: 3rem 1rem 1rem 1rem;
