--- a/src/components/player/Song/Song.module.scss
+++ b/src/components/player/Song/Song.module.scss
@@ -17,15 +17,14 @@
 	.img-inside {
 		width: calc(40vh - 20px);
 		max-height: 100%;
-		max-width: 50%;
+		max-width: 50vh;
 		border-radius: 5% 5% / 5% 5%;
 		box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
 
-		@media (max-width: 768px) {
+		@media screen and (max-width: 450px) {
 			width: 90%;
 			max-height: 100%;
-			border-radius: 5% 5% / 5% 5%;
-			box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
+			max-width: 100%;
 		}
 	}
 	h2 {
